# onboarding

./: .gitignore  README.md  pyproject.toml
clients/: onboarding_client.py
src/: cli.py  file_uploader.py
src/core/: auth.py  cli.py  customer.py  file_uploader.py  metrics.py
src/core/clients/: onboarding_client.py
src/core/configs/: cfg.py
src/core/tests/: cli_setup_customer.py  test_compute_status.py  test_connect_datasources.py  test_create_customer.py  test_create_partner.py  test_delete_customer.py  test_delete_partner.py  test_file_upload.py  test_list_models.py  test_list_products.py  test_metric_compute.py  test_poll_customer_db.py  test_setup_customer.py  test_validate_model.py
src/core/utils/: async_helpers.py  helpers.py  logger.py  paths.py
tests/: test_compute_status.py
utils/: async_helpers.py  helpers.py
