[project]
name = "onboarding"
version = "0.1.0"
description = "Customer onboarding end-to-end pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "jira>=3.8.0",
    "mysql-connector-python>=9.3.0",
    "pygithub>=2.6.1",
    "python-arango>=8.2.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]
